fixed height issue on mobile (tablet)

--- a/style.css
+++ b/style.css
@@ -48,10 +48,8 @@ h1{
     background-color: rgba(255, 255, 255, 0.5);
     min-height: 100vh;
     width: 100%;
-    padding: 2vh;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    padding: 2vh 0 2vh 0;
+
 }
 /*############### COLUMN CONTENT ###############*/
 .col-head{
@@ -167,6 +165,19 @@ h1{
 .desc p{
     width: 100%;
     margin: 0;
+}
+
+.center-wrap{
+    width: 100%;
+
+}
+.center-inner{
+    width: 70%;
+    padding-left: 13vw;
+}
+.center-inner label{
+
+    width: 50%;
 }
 
 .check{
@@ -469,7 +480,7 @@ input::-webkit-inner-spin-button {
         width: 70vw;
     }
 
-    .results-tbl{width: 100%;}
+    .results-tbl{width: 90%;}
     .check{
 
         transform: scale(3);
